compiler/tools/fpp-check/test/port_instance/undef_command_resp.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_command_resp.fpp:3.3
  command resp port cmdResponseOut
  ^
error: symbol Fw is not defined
note: looking for a port here
